--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   justify-content: center; /* centers grid items if there's extra space */
   padding-left: 0rem;
   padding-right: 0rem;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
 }
 
 .matrix-item {
@@ -28,48 +28,9 @@
   grid-template-columns: repeat(13, 90px);
 }
 
-
-
-
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to right, #bfdbfe, #e9d5ff);
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
