HandCell transitions! Line added but not functional, fixed some actionToNumber mapping

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
-
+.segment {
+  transition: width 500ms ease-in-out;
+}
 
 .decision-grid {
   grid-template-columns: repeat(13, 90px);
